--- a/package.json
+++ b/package.json
@@ -3,38 +3,42 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "dev": "next dev",
+    "postinstall": "prisma generate",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^4.2.1",
-    "@trpc/client": "^9.27.0",
-    "@trpc/next": "^9.27.0",
-    "@trpc/react": "^9.27.0",
-    "@trpc/server": "^9.27.0",
-    "next": "12.2.5",
+    "@prisma/client": "^4.4.0",
+    "@trpc/client": "^9.27.4",
+    "@trpc/next": "^9.27.4",
+    "@trpc/react": "^9.27.4",
+    "@trpc/server": "^9.27.4",
+    "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^3.39.2",
-    "superjson": "^1.9.1",
-    "zod": "^3.18.0"
+    "superjson": "^1.10.0",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
-    "@types/node": "18.7.6",
-    "@types/react": "18.0.17",
+    "@types/node": "18.7.23",
+    "@types/react": "18.0.21",
     "@types/react-dom": "18.0.6",
-    "autoprefixer": "^10.4.8",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "postcss": "^8.4.16",
-    "prisma": "^4.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "autoprefixer": "^10.4.12",
+    "eslint": "8.24.0",
+    "eslint-config-next": "12.3.1",
+    "postcss": "^8.4.17",
+    "prettier": "2.7.1",
+    "prettier-plugin-tailwindcss": "^0.1.13",
+    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.7.4"
+    "typescript": "4.8.4"
   },
   "ct3aMetadata": {
-    "initVersion": "5.6.0"
+    "initVersion": "5.14.0"
   }
 }
